<resources>
    <string name="app_name">DJ Tech</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="dj_tech.com">www.djtech.com.ng</string>
    <string name="publicise">Publicise</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="career">Career</string>
    <string name="contact_us">Contact Us</string>


    <string name="prefs_background">prefs_background</string>
    <string name="prefs_assistance">Assistance</string>
    <string name="prefs_bg_title">Change Home Background</string>
    <string name="prefs_FAQs">FAQs</string>
    <string name="prefs_information">Information</string>
    <string name="prefs_app_info">App Info</string>
    <string name="prefs_information_key">prefs_info</string>
    <string name="prefs_app_info_key">prefs_app_info</string>
    <string name="prefs_policy_key">prefs_privacy</string>
    <string name="prefs_policy">Privacy Policy</string>
    <string name="prefs_visit_site">Visit Website</string>
    <string name="prefs_visit_site_key">prefs_visit</string>
    <string name="prefs_credits">Credits</string>
    <string name="prefs_credits_key">prefs_credits</string>

    <string name="news_post_poster">News Post Poster</string>
    <string name="share_button">share button</string>
    <string name="by_author">-by %s</string>
    <string name="text_error_text_view">Unable to load data \n Check your internet connection</string>
    <string name="text_loading_">Loading…</string>
    <string name="no_internet_error_image">No internet error image</string>
    <string name="refreshing">Refreshing…</string>
    <string name="title_activity_blog_post_detail">BlogPostDetailActivity</string>


    <string name="web_developer">WEB DEVELOPER</string>
    <string name="mobile_app_developer">MOBILE APP DEVELOPER</string>
    <string name="business_specialist">BUSINESS SPECIALIST</string>
    <string name="graphics_designer">GRAPHICS DESIGNER</string>
    <string name="online_publicist">ONLINE PUBLICIST</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating">Rating</string>
    <string name="gallery">Gallery</string>
    <string name="solid_colour">Solid Color</string>
    <string name="remove">No wallpaper</string>
    <string name="settings">Settings</string>
    <string name="faqs">Frequently Asked Questions</string>
    <string name="select_wallpaper">Select Home Wallpaper</string>
    <string name="u00a9_2017_www_djtech_com_ng">© 2017 www.djtech.com.ng</string>
    <string name="all_rights">All rights reserved</string>
    <string name="dj_tech_logo">DJTech Logo</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="djtech_app">DJTech App</string>
    <string name="theme_prefs_key">Select the theme of the app</string>
    <string name="prefs_appearance">Appearance</string>
    <string name="theme_change_toast_texrt">Changes will take effect on next restart</string>

    <string name="team">Team</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="isaiah">Isaiah Bakare</string>
    <string name="theme_change_toast_text">Theme Changed</string>
    <string name="where_we_come_in">
\t<b>WHERE WE COME IN</b>\n

The world as we know it is a global village connected by the internet. The relevance of web/mobile development cannot be over emphasized when it comes to turning your big idea into reality. We believe every developed/developing Body or Institution should be well represented in the internet world to enhance innovation, productivity and efficiency; this is why you should choose us.
</string>
    <string name="conclusion">\tWe do hope to give our maximum best to ensure customer satisfaction and meet up all expectations. Choosing us would help us achieve our mission statement and do always remember that "We are at your service".</string>

    <string name="vision">
    \tBeing identified among the World’s leading Technological Companies in the foreseeable future.</string>

    <string name="about_djtech">\t\tDJTech Company is a fast growing company that is into the creation and design of Websites, web applications, android applications(phone and tablet), iOS applications(iPhone and iPad), windows applications, graphics content(logos, business cards etc). We offer all these services at a cheap and customer friendly rate.\n

\t\tThe company is gradually becoming one of the most sought after tech companies in the country and was established after years of training and experience gaining by the founders.</string>

    <string name="mission_statement">\tTo ensure that technological advancements in software/programming is brought to everyone and creating a reliable connection among all parts of society spanning Business, Religion, Commerce, Education, Lifestyle etc.\n
\tWe also maintain a free, friendly, and creative work environment, which respects diversity, new ideas, hard work and team work.</string>
    <string-array name="appearance_options">
        <item>Choose theme</item>
        <item>Change Home Background</item>
    </string-array>
    <string-array name="assistance_options">
        <item>FAQs</item>
        <item>Information</item>
    </string-array>
    <string-array name="info_options">
        <item>App Info</item>
        <item>Privacy Policy</item>
        <item>Credits</item>
        <item>Visit Website</item>
    </string-array>


    <string name="mobile_banner">\t<b>MULTI-PLATFORM MOBILE APPS</b>\n
     Native Mobile Applications in any platform with beautiful designs and User friendly interfaces.</string>
    <string name="web_banner">\t<b>GET YOUR WEBSITE NOW!</b>\n
    Get your own website now at a very affordable price.</string>
    <string name="graphics_banner">\t<b>AWESOME GRAPHICS</b>\n
    With mind blowing graphic designs, we bring your ideas to the limelight. We pop dreams into existence.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_theme">Select theme</string>
    <string name="djtech">DJTech</string>
</resources>
