<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kryptkode.cyberman.djtech.ui.fragments.HomeScreenFragment">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/post_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/post_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />


    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/error_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/cloud_error"
            android:contentDescription="@string/no_internet_error_image" />

        <TextView
            android:id="@+id/error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/error_image_view"
            android:layout_centerHorizontal="true"
            android:text="@string/text_error_text_view"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/loading_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loading_progress_bar"
            android:layout_centerHorizontal="true"
            android:text="@string/text_loading_"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent"
            android:visibility="invisible" />

    </RelativeLayout>

</FrameLayout>

