<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.kryptkode.cyberman.djtech.AboutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:fontFamily="serif"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:textSize="32sp"
            android:text="ABOUT DJTECH COMPANY"
            android:textColor="@color/colorAccent"
            />

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_djtech"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ViewFlipper
                android:id="@+id/viewflipper"
                android:layout_gravity="top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/web_image"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:src="@drawable/websitebanner" />

                <ImageView
                    android:id="@+id/mobile_image"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:src="@drawable/mobileappbanner"/>
                <ImageView
                    android:id="@+id/graphics_image"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:src="@drawable/graphicsbanner"/>
            </ViewFlipper>
            <TextView
                android:id="@+id/about_image_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#fff"/>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MISSION STATEMENT"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/mission_statement"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="VISION"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/vision"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="top">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="top"
                android:layout_gravity="top"
                android:src="@drawable/globe"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:text="@string/where_we_come_in"
                />
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conclusion"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:layout_gravity="center"/>
    </LinearLayout>

</ScrollView>
